--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -85,7 +85,7 @@
       <% end %>
     </div>
     <div class="col-8">
-      <h2>Корзина</h2>
+      <h2>Ваш заказ</h2>
       <table class="table table-hover">
         <thead>
           <tr>
