--- a/app/views/carts/delete_product_from_cart.js.erb
+++ b/app/views/carts/delete_product_from_cart.js.erb
@@ -1,8 +1,14 @@
-document.getElementById('cart_product_<%= @cart_product.id %>').remove()
+document.getElementById('cart_product_<%= @cart_product.id %>').remove();
 document.getElementById('cart_link_count').innerText = "<%= @cart.total_product_count %>";
 document.getElementById('total_cart_sum').innerText = "<%= @cart.total_cart_sum %> грн.";
 
 if (<%= @cart.total_product_count %> == 0){
+  if ($("div").is(".cart_wrapper")) {
+    $(".cart_wrapper").empty();
+    $(".cart_wrapper").html('<div class="empty_cart">Корзина товаров пуста :(</div>');
+    $(".cart_buttons").empty();
+    $(".cart_buttons").html('<%= link_to "На главную", root_path, class: "cart_button btn btn-outline-primary" %>');
+  };
   $("#cartModal").modal('hide');
   document.getElementById("cart_link").classList.add('disabled');
 };
