--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,5 +1,151 @@
+<style media="screen">
+  .btn-custom {
+    background-color: yellow;
+    color: #007bff !important;
+  }
+
+  .btn-custom:hover {
+    cursor: pointer;
+  }
+
+  .btn.btn-outline-primary:hover {
+    color: yellow;
+  }
+
+  .cart_button {
+    margin: 15px 10px 0 0;
+  }
+
+  .cart_buttons {
+    border-top: 1px solid #dee2e6;
+  }
+
+  .empty_cart {
+    margin-bottom: 15px;
+  }
+
+  .table th {
+    border-top: 0px;
+  }
+
+  .table td {
+    border-bottom: 1px solid #dee2e6
+  }
+
+  .delete_product_from_cart {
+    color: black;
+    border: solid 1px black;
+    padding: 0px 5px;
+    border-radius: 50%;
+    font-weight: normal;
+    font-style: normal;
+  }
+
+  .delete_product_from_cart:hover {
+    color: white;
+    background-color: black;
+    text-decoration: none;
+  }
+
+  #total_cart_sum {
+    font-size: 3rem;
+  }
+
+</style>
+
 <% content_for :head do %>
   <title>Корзина товаров | Angar.kh.ua</title>
 <% end %>
 
-<%= render "patrials/cart" %>
+<h1>Корзина товаров</h1>
+
+<% unless current_cart.cart_products.empty? %>
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% current_cart.cart_products.each do |cart_product| %>
+        <tr>
+          <td>
+            <div class="row">
+              <div class="col-4">
+                <% cart_product.product.product_photos.main.each do |photo| %>
+                  <%= link_to image_tag(photo.image.url, width: '100%'), cart_product.product %>
+                <% end %>
+              </div>
+              <div class="col-7 d-flex align-items-start flex-column">
+                <h2><%= link_to cart_product.product.name, cart_product.product %></h2>
+                <div><%= cart_product.product.summary %></div>
+                <div class="row mt-auto">
+                  <div class="col-4">
+                    <input type="number" name="quantity" class="form-control cart_item_id" data-id="<%= cart_product.product.id %>"
+                    data-price="<%= cart_product.product.price %>"
+                    max="<%= cart_product.product.quantity %>" min="1" value="<%= cart_product.product_count %>">
+                  </div>
+                  <div class="col-4">
+                    <%= cart_product.product.price %> грн.
+                  </div>
+                  <div class="col-4" id="product_<%= cart_product.product.id %>_sum">
+                    <%= cart_product.total_product_sum %> грн.
+                  </div>
+                </div>
+              </div>
+              <div class="col-1">
+                <%= link_to delete_product_from_cart_carts_url(cart_products_id: cart_product.id), class: "delete_product_from_cart", remote: true do %>
+                  &times;
+                <% end %>
+              </div>
+            </div>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <div class="row">
+    <div class="col-7">
+
+    </div>
+    <div class="col-5">
+      Итого: <br/>
+      <span id="total_cart_sum"><%= current_cart.total_cart_sum %> грн.</span>
+    </div>
+  </div>
+  <div class="cart_buttons text-right">
+    <%= link_to "Продолжить покупки", :back, class: "cart_button btn btn-outline-primary" %>
+    <%= link_to "Оформить заказ", new_order_path(), class: "cart_button btn btn-custom" %>
+  </div>
+<% else %>
+  <div class="empty_cart">
+    Корзина товаров пуста :(
+  </div>
+  <div class="cart_buttons text-right">
+    <%= link_to "На главную", root_path, class: "cart_button btn btn-outline-primary" %>
+  </div>
+<% end %>
+
+<script type="text/javascript">
+  $('#product_quantity input').on('change input', function() {
+    var product_count = parseInt($(this).val());
+    var max_product_count = parseInt($(this).attr('max'));
+    if (product_count > max_product_count) {
+      $(this).val(max_product_count);
+      product_count = max_product_count;
+    }
+    send_request(product_count, $(this).attr('data-id'));
+  });
+
+  function send_request(product_count, product_id) {
+    var data = {
+      product_id: product_id,
+      product_count: product_count,
+      add_in_cart_modal: true
+    };
+    $.ajax({
+      url: "<%= product_to_cart_carts_path %>",
+      data: data
+    });
+  }
+</script>
