--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -11,7 +11,7 @@
 <h2>Регистрация</h2>
 
 <div class="row">
-  <div class="col-md-7 col-12">
+  <div class="col-12">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
