--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -51,6 +51,10 @@
     font-size: 3rem;
   }
 
+  .prices {
+    font-size: 1.5rem;
+  }
+
 </style>
 
 <% content_for :head do %>
@@ -71,24 +75,24 @@
         <tr>
           <td>
             <div class="row">
-              <div class="col-4">
+              <div class="col-3">
                 <% cart_product.product.product_photos.main.each do |photo| %>
                   <%= link_to image_tag(photo.image.url, width: '100%'), cart_product.product %>
                 <% end %>
               </div>
-              <div class="col-7 d-flex align-items-start flex-column">
-                <h2><%= link_to cart_product.product.name, cart_product.product %></h2>
+              <div class="col-8 d-flex align-items-start flex-column">
+                <h2 style="margin-bottom: 0"><%= link_to cart_product.product.name, cart_product.product %></h2>
                 <div><%= cart_product.product.summary %></div>
-                <div class="row mt-auto">
-                  <div class="col-4">
+                <div class="row mt-auto" style="width: 100%;">
+                  <div class="col-4" id="product_quantity">
                     <input type="number" name="quantity" class="form-control cart_item_id" data-id="<%= cart_product.product.id %>"
                     data-price="<%= cart_product.product.price %>"
                     max="<%= cart_product.product.quantity %>" min="1" value="<%= cart_product.product_count %>">
                   </div>
-                  <div class="col-4">
+                  <div class="col-4 prices">
                     <%= cart_product.product.price %> грн.
                   </div>
-                  <div class="col-4" id="product_<%= cart_product.product.id %>_sum">
+                  <div class="col-4 prices" id="product_<%= cart_product.product.id %>_sum">
                     <%= cart_product.total_product_sum %> грн.
                   </div>
                 </div>
