--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -6,7 +6,7 @@
 
   <div class="row">
     <div class="col-4">
-      <%= form_with(model: order) do |form| %>
+      <%= form_for order do |form| %>
         <% if order.errors.any? %>
           <div id="error_explanation">
             <h2><%= pluralize(order.errors.count, "error") %> prohibited this order from being saved:</h2>
