--- a/app/views/application/main.html.erb
+++ b/app/views/application/main.html.erb
@@ -1,12 +1,9 @@
 <style media="screen">
-  .c-image {
-    height: 240px;
-  }
-
   .img {
-    width: 180px;
+    max-width: 97%;
     height: 200px;
   }
+
 </style>
 
 <% content_for :head do %>
