--- a/app/views/patrials/_header.html.erb
+++ b/app/views/patrials/_header.html.erb
@@ -67,7 +67,7 @@
 
 </style>
 
-<div id="header" class="container">
+<div id="header" class="wrapper container">
   <div class="row justify-content-between">
     <div class="col-md-auto text-center">
       <a href="/">
@@ -227,8 +227,8 @@
       $('#cart_link').attr('data-remote', 'false');
     } else {
       $('#cart_link').attr('data-remote', 'true');
-    }
-  }
+    };
+  };
 
   $(window).on('load resize',windowSize);
 </script>
