--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -52,7 +52,11 @@
   }
 
   .prices {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
+  }
+
+  .prices span {
+    font-size: 1rem
   }
 
 </style>
@@ -84,16 +88,16 @@
                 <h2 style="margin-bottom: 0"><%= link_to cart_product.product.name, cart_product.product %></h2>
                 <div><%= cart_product.product.summary %></div>
                 <div class="row mt-auto" style="width: 100%;">
-                  <div class="col-4" id="product_quantity">
+                  <div class="col-3" id="product_quantity">
                     <input type="number" name="quantity" class="form-control cart_item_id" data-id="<%= cart_product.product.id %>"
                     data-price="<%= cart_product.product.price %>"
                     max="<%= cart_product.product.quantity %>" min="1" value="<%= cart_product.product_count %>">
                   </div>
                   <div class="col-4 prices">
-                    <%= cart_product.product.price %> грн.
+                    <%= cart_product.product.price %> <span>грн.</span>
                   </div>
                   <div class="col-4 prices" id="product_<%= cart_product.product.id %>_sum">
-                    <%= cart_product.total_product_sum %> грн.
+                    <%= cart_product.total_product_sum %> <span>грн.</span>
                   </div>
                 </div>
               </div>
