--- a/app/views/patrials/_products.html.erb
+++ b/app/views/patrials/_products.html.erb
@@ -52,5 +52,5 @@
 <%= paginate @products, remote: true, pagination_class: "justify-content-center" %>
 
 <script type="text/javascript">
-  $('.text-on-img').bigtext();
+  $('.text-on-img').bigtext({maxfontsize:60, minfontsize: 1});
 </script>
