--- a/app/views/patrials/_products.html.erb
+++ b/app/views/patrials/_products.html.erb
@@ -16,8 +16,7 @@
   }
 
   .product_img {
-    margin-top: 1%;
-    width: 97%;
+    max-width: 97%;
     height: 200px;
     object-fit: contain;
   }
@@ -26,11 +25,13 @@
 
 <div class="row">
   <% @products.each do |product| %>
-    <div class="col-lg-4 col-md-6 col-12">
+    <div class="col-lg-4 col-md-4 col-12">
       <div class="card text-center">
         <div class="text-on-img text-center">
-          <h5 class="card-title"><%= link_to product.name, product, style: "color: yellow;" %></h5>
-          <p class="product-summary card-text" style="color: yellow !important;"><%= product.summary %></p>
+          <h5 class="card-title" style="margin: 0;"><%= link_to product.name, product, style: "color: yellow;" %></h5>
+          <div class="product-summary">
+            <p class="card-text" style="color: yellow !important;"><%= product.summary %></p>
+          </div>
         </div>
         <% product.product_photos.main.each do |photo| %>
           <%= link_to image_tag(photo.image.url, alt: product.name, class: "product_img"), product, class: "img_wrapper" %>
@@ -54,5 +55,5 @@
 <%= paginate @products, remote: true, pagination_class: "justify-content-center" %>
 
 <script type="text/javascript">
-  $('.text-on-img').bigtext({maxfontsize:60, minfontsize: 7});
+  $('.product-summary').bigtext({maxfontsize:60, minfontsize: 7});
 </script>
