--- a/app/views/patrials/_header.html.erb
+++ b/app/views/patrials/_header.html.erb
@@ -69,7 +69,7 @@
 
 <div id="header" class="wrapper container">
   <div class="row justify-content-between">
-    <div class="col-md-auto text-center">
+    <div class="col-auto text-center">
       <a href="/">
         <%= image_tag(app_images.logo.image.url, alt: 'logo', style: 'height: 65px;') %>
       </a>
@@ -98,7 +98,7 @@
         </ul>
       </address>
     </div>
-    <div class="col-md-auto text-right" style="margin-top: 15px;">
+    <div class="col-auto text-right" style="margin-top: 15px;">
       <% if current_user %>
         <%= link_to "Личный кабинет", orders_path, class: "btn btn-primary", style: "color: yellow;" %>
         <%= link_to "Выход", destroy_user_session_path, method: :delete, class: "btn btn-dark", style: "color: yellow;" %>
