--- a/app/views/patrials/_product_photo_modal.html.erb
+++ b/app/views/patrials/_product_photo_modal.html.erb
@@ -34,15 +34,6 @@
       <div class="modal-body img_wrapper">
         <div id="carouselExampleIndicators" class="carousel slide img_wrapper_2" data-ride="carousel" data-interval="false">
           <div class="row img_wrapper">
-            <div class="d-md-none d-lg-block col-lg-2 img_wrapper_2" style="">
-              <ul class="carousel-indicators">
-                <% @product.product_photos.each_with_index do |photo, index| %>
-                  <li id="photo_indecator_<%= photo.id %>" class="photo_indecator" data-target="#carouselExampleIndicators" data-slide-to="<%= index %>">
-                    <%= image_tag(photo.image.url, width: '100%', height: '112px') %>
-                  </li>
-                <% end %>
-              </ul>
-            </div>
             <div class="col-lg-10 col-12 img_wrapper_2">
               <div class="carousel-inner img_wrapper_2">
                 <% @product.product_photos.each do |photo| %>
@@ -59,6 +50,15 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
               </a>
+            </div>
+            <div class="d-md-none d-lg-block col-lg-2 img_wrapper_2" style="">
+              <ul class="carousel-indicators img_wrapper_2" style="overflow-y: scroll">
+                <% @product.product_photos.each_with_index do |photo, index| %>
+                  <li id="photo_indecator_<%= photo.id %>" class="photo_indecator" data-target="#carouselExampleIndicators" data-slide-to="<%= index %>">
+                    <%= image_tag(photo.image.url, width: '100%', height: '112px') %>
+                  </li>
+                <% end %>
+              </ul>
             </div>
           </div>
         </div>
