--- a/app/views/patrials/_products.html.erb
+++ b/app/views/patrials/_products.html.erb
@@ -29,7 +29,7 @@
       <div class="card text-center">
         <div class="text-on-img text-center">
           <h5 class="card-title" style="margin: 0;"><%= link_to product.name, product, style: "color: yellow;" %></h5>
-          <div class="product-summary">
+          <div class="d-lg-block d-md-none product-summary">
             <p class="card-text" style="color: yellow !important;"><%= product.summary %></p>
           </div>
         </div>
