--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -195,35 +195,38 @@
   <div style="padding-left: 15px">
     <%= @product.discription.html_safe %>
   </div>
-  <h2>Подобные товары:</h2>
-  <div class="owl-carousel owl-theme">
-    <% @products.each do |product| %>
-      <div class="item">
-        <div class="card text-center">
-          <div class="text-on-img text-center">
-            <h5 class="card-title" style="margin: 0;"><%= link_to product.name, product, style: "color: yellow;" %></h5>
-            <div class="product-summary">
-              <p class="card-text" style="color: yellow !important;"><%= product.summary %></p>
+  <% if @products.count >= 3 %>
+    <h2>Подобные товары:</h2>
+    <div class="owl-carousel owl-theme">
+      <% @products.each do |product| %>
+        <div class="item">
+          <div class="card text-center">
+            <div class="text-on-img text-center">
+              <h5 class="card-title" style="margin: 0;"><%= link_to product.name, product, style: "color: yellow;" %></h5>
+              <div class="product-summary">
+                <p class="card-text" style="color: yellow !important;"><%= product.summary %></p>
+              </div>
             </div>
-          </div>
-          <% product.product_photos.main.each do |photo| %>
-            <%= link_to image_tag(photo.image.url, alt: product.name, class: "product_img"), product, class: "img_wrapper" %>
-          <% end %>
-          <div class="card-body">
-            <p class="card-text text-right" style="font-size: 1.5rem"><%= product.price %> грн.</p>
-            <div class="row justify-content-between">
-              <%= link_to "Подробнее", product, class: "btn btn-outline-primary button-detail col-5", style: "margin: 0 10px;" %>
-              <% if product.display? %>
-                <%= link_to "В корзину", product_to_cart_carts_path(product_id: product.id), remote: true, class: "btn btn-warning col-5", style: "margin: 0 10px; color: #007bff; background-color: yellow; border-color: yellow;" %>
-              <% else %>
-                <span class="btn btn-danger col-5 disabled" style="margin: 0 10px; color: #007bff;">Не имеется</span>
-              <% end %>
+            <% product.product_photos.main.each do |photo| %>
+              <%= link_to image_tag(photo.image.url, alt: product.name, class: "product_img"), product, class: "img_wrapper" %>
+            <% end %>
+            <div class="card-body">
+              <p class="card-text text-right" style="font-size: 1.5rem"><%= product.price %> грн.</p>
+              <div class="row justify-content-between">
+                <%= link_to "Подробнее", product, class: "btn btn-outline-primary button-detail col-5", style: "margin: 0 10px;" %>
+                <% if product.display? %>
+                  <%= link_to "В корзину", product_to_cart_carts_path(product_id: product.id), remote: true, class: "btn btn-warning col-5", style: "margin: 0 10px; color: #007bff; background-color: yellow; border-color: yellow;" %>
+                <% else %>
+                  <span class="btn btn-danger col-5 disabled" style="margin: 0 10px; color: #007bff;">Не имеется</span>
+                <% end %>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    <% end %>
-  </div>
+      <% end %>
+    </div>
+  <% end %>
+
 </div>
 
 <!-- PhotoModal -->
