--- a/app/assets/stylesheets/nestable.css
+++ b/app/assets/stylesheets/nestable.css
@@ -139,4 +139,4 @@ p { line-height: 1.5em; }
  * Socialite
  */
 
-.socialite { display: block; float: left; height: 35px; } */
+.socialite { display: block; float: left; height: 35px; }
