--- a/app/views/patrials/product_patrials/_buy_form.html.haml
+++ b/app/views/patrials/product_patrials/_buy_form.html.haml
@@ -1,4 +1,4 @@
-.product-cards.card
+.product-cards.card(style='margin-bottom: 1rem;')
   .card-body
     .d-flex.justify-content-between
       .col-auto.products-cols
