--- a/app/views/patrials/product_patrials/_productCommentsTab.html.haml
+++ b/app/views/patrials/product_patrials/_productCommentsTab.html.haml
@@ -1,5 +1,5 @@
 .row
-  .col-8
+  .col-lg-8
     %h2
       Отзывы покупателей о
       %span.title-product-name
@@ -7,6 +7,6 @@
         = @product.name
     = render 'patrials/product_patrials/product_comments_form'
     = render 'patrials/product_patrials/product_comments'
-  .col-4
+  .col-lg-4
     = render 'patrials/product_patrials/product_label'
     = render 'patrials/product_patrials/buy_form'
