--- a/app/views/patrials/product_patrials/_product_label.html.haml
+++ b/app/views/patrials/product_patrials/_product_label.html.haml
@@ -1,7 +1,7 @@
 .product-cards.card
   .card-body
-    .d-flex
-      .col-4.align-self-center.products-cols
+    .row
+      .col-auto.align-self-center.product_label_photo
         - @product.product_photos.main.each do |photo|
           = image_tag(photo.image.url, class: "mini_allAboutProductPhoto")
       .col-8.products-cols
