--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -25,7 +25,7 @@
     %a#allAboutProduct-tab.nav-link.active(href="#allAboutProduct" data-toggle="tab" role="tab" aria-controls="allAboutProduct" aria-selected="true")
       Все о #{@product.name}
   %li.nav-item.text-center
-    %a#specifications-tab.nav-link(href="#discription" data-toggle="tab" role="tab" aria-controls="discription" aria-selected="false")
+    %a#discription-tab.nav-link(href="#discription" data-toggle="tab" role="tab" aria-controls="discription" aria-selected="false")
       Описание
   %li.nav-item.text-center
     %a#specifications-tab.nav-link(href="#specifications" data-toggle="tab" role="tab" aria-controls="specifications" aria-selected="false")
