--- a/app/views/patrials/product_patrials/_allAboutProductTab.html.haml
+++ b/app/views/patrials/product_patrials/_allAboutProductTab.html.haml
@@ -1,50 +1,64 @@
 .row
   .col-lg-8
     = render 'patrials/product_patrials/allAboutProduct_photo'
-    .d-lg-block.d-md-none
-      %h2= "Описание"
-      = @product.discription.html_safe
+    .d-lg-block.d-md-none.discription
+      .discription_text
+        %h2= "Описание"
+        = @product.discription.html_safe
+    %a.details(href="")= "Подробнее"
   .col-lg-4
-    =render 'patrials/product_patrials/buy_form'
-    .product-cards.card
-      .card-header
-        Способы доставки
-      .card-body
-        %ul#delivery
-          %li.d-flex
-            .col-7.products-cols
-              Самовывоз из магазина
-            .col-5.products-cols
-              - if Time.zone.now < @close_time
-                Сегодня до 21:00
-              - else
-                Завтра с 09:00
-          %li.d-flex
-            .col-7.products-cols
-              %span(title="Отправка без предоплаты")
-                Отправка Новой Почты
-            .col-5.products-cols
-              - if Time.zone.now < @late_delivery_time
-                Отправим сегодня
-              - else
-                Отправим завтра
-    .product-cards.card
-      .card-header
-        Гарантия
-      .card-body
-        .div
-          %span(title="Гарантийное обслуживание действует только при наличии чека и гарантийного талона")
-            = @product.product_properties.waranty.value.to_s
-        .div
-          Обмен/возврат товара в течении 14 дней
-        .div(style="font-size: .7rem; margin-left: 1rem;")
-          *Продавец гарантирует упаковку заказанного товара, которая обеспечит целостность и сохранность его товарного вида
+    .product_side
+      =render 'patrials/product_patrials/buy_form'
+      .product-cards.card
+        %h5.card-header
+          Способы доставки
+        .card-body
+          %ul#delivery
+            %li.d-flex
+              .col-7.products-cols
+                Самовывоз из магазина
+              .col-5.products-cols
+                - if Time.zone.now < @close_time
+                  Сегодня до 21:00
+                - else
+                  Завтра с 09:00
+            %li.d-flex
+              .col-7.products-cols
+                %span(title="Отправка без предоплаты")
+                  Отправка Новой Почты
+              .col-5.products-cols
+                - if Time.zone.now < @late_delivery_time
+                  Отправим сегодня
+                - else
+                  Отправим завтра
+      .product-cards.card
+        %h5.card-header
+          Гарантия
+        .card-body
+          .div
+            %span(title="Гарантийное обслуживание действует только при наличии чека и гарантийного талона")
+              = @product.product_properties.waranty.value.to_s
+          .div
+            Обмен/возврат товара в течении 14 дней
+          .div(style="font-size: .7rem; margin-left: 1rem;")
+            *Продавец гарантирует упаковку заказанного товара, которая обеспечит целостность и сохранность его товарного вида
 - if @products.count >= 4
   = render 'patrials/product_patrials/similar_products'
 .row.d-lg-flex.d-md-none
   .col-6
-    %h2= "Характеристики"
-    = render 'patrials/product_patrials/specifications'
+    %h2
+      Характеристики
+      %span.title-product-name
+        = @product.product_properties.product_type.value.to_s
+        = @product.name
+    = render 'patrials/product_patrials/main_specifications'
+    %a#more_specifications.more_details(href="")
+      Все характеристики
   .col-6
-    %h2= "Отзывы"
-    = render 'patrials/product_patrials/product_comments'
+    %h2
+      Отзывы
+      %span.title-product-name
+        = @product.product_comments.count
+    = render 'patrials/product_patrials/first_5_product_comments'
+    %a#more_comments.more_details(href="")
+      Все отзывы
