--- a/app/views/orders/edit.html.haml
+++ b/app/views/orders/edit.html.haml
@@ -4,7 +4,7 @@
 = stylesheet_link_tag 'order'
 = stylesheet_link_tag 'cart', current_cart: @order.cart
 
-%h1= "Edit заказа"
+%h1= "Редактирование заказа"
 
 .row
   .col-8
@@ -24,7 +24,7 @@
       = form.email_field :email, placeholder: 'Адрес электронной почты', class: "form-control field", required: true
       = form.text_field :first_name, placeholder: 'Имя', class: "form-control field", required: true
       = form.text_field :last_name, placeholder: 'Фамилия', class: "form-control field", required: true
-      = form.select :payment, raw("<option>Наличными</option> <option>На карту Приват Банка</option> <option>Наложенный платеж</option>"), {}, {class: "form-control field"}
+      = form.select :payment, raw(@payment_select), {}, {class: "form-control field"}
       = form.select :delivery, raw("<option>Самовывоз</option> <option>Доставка Новой Почтой</option>"), {}, {class: "form-control field field"}
 
       .delivery
@@ -45,6 +45,6 @@
 
       = form.text_area :discription, placeholder: "Примичания", class: "form-control field"
 
-      = form.submit "Save заказ",class: "btn btn-primary btn-block"
+      = form.submit "Сохранить заказ",class: "btn btn-primary btn-block"
 
 = javascript_include_tag 'order'
