--- a/app/views/patrials/_products_list.html.haml
+++ b/app/views/patrials/_products_list.html.haml
@@ -13,8 +13,16 @@
             = product.price
             грн.
           .row.products-list-buttons.justify-content-between
-            = link_to "Подробнее", product, class: "btn btn-outline-primary col-6 products-list-buttons"
+            = link_to "Подробнее", product, class: "btn btn-outline-primary col-6 products-list-buttons first-row"
             - if product.display?
-              = link_to "В корзину", product_to_cart_carts_path(product_id: product.id), remote: true, class: "btn btn-yellow col-6 products-list-buttons"
+              = link_to "В корзину", product_to_cart_carts_path(product_id: product.id), remote: true, class: "btn btn-yellow col-6 products-list-buttons first-row"
             - else
-              %span.btn.btn-danger.col-6.products-list-buttons.disabled= 'Отсутствует'
+              %span.btn.btn-danger.col-6.products-list-buttons.disabled.first-row= 'Отсутствует'
+          .row.products-list-buttons.justify-content-between(id="product-#{product.id}-compare-buttons")
+            - if current_compare.products.ids.include?(product.id)
+              = link_to "Убрать из сравнения", delete_product_from_compare_compares_path(product_id: product.id), remote: true, class: "btn btn-outline-primary col-9 products-list-buttons"
+              = link_to compare_path(id: session[:current_compare_id]), class: "btn btn-yellow col-3 compare_link products-list-buttons" do
+                %i.fas.fa-balance-scale
+                %span.compare_link_count= current_compare.compare_products.count
+            - else
+              = link_to "Сравнить", product_to_compare_compares_path(product_id: product.id), remote: true, class: "btn btn-outline-primary col-6 products-list-buttons"
